Planet: Prevented newestarticles li to wrap over columns

--- a/inyoka_theme_default/static/style/inyoka/planet.less
+++ b/inyoka_theme_default/static/style/inyoka/planet.less
@@ -14,6 +14,10 @@
       &-list {
         columns: 2;
         column-gap: 4em;
+
+        li {
+          break-inside: avoid;
+        }
       }
     }
   }
